[package]
name = "hyperlight-wasm-runtime"
version.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
edition = "2021"
description = """
hyperlight-wasm-runtime is a rust binary crate that provides the WebAssembly runtime binary for hyperlight-wasm.
"""

[lib]
test = false
doctest = false
bench = false

[[bin]]
name = "hyperlight-wasm-runtime"
path = "src/main.rs"
test = false
doctest = false
bench = false

[target.'cfg(hyperlight)'.dependencies]
hyperlight-common = { workspace = true, default-features = false }
hyperlight-guest-bin.workspace = true
hyperlight-guest.workspace = true
hyperlight-wasm-macro.workspace = true
# Default to the LTS wasmtime version; use wasmtime_latest to opt into latest.
# These are marked optional to avoid pulling them both in. They should be mutually exclusive.
wasmtime = { version = "45.0.2", default-features = false, features = [ "runtime", "custom-virtual-memory", "custom-native-signals", "component-model" ], optional = true }
wasmtime_lts = { package = "wasmtime", version = "36.0.11", default-features = false, features = [ "runtime", "custom-virtual-memory", "custom-native-signals", "component-model" ], optional = true }
spin = "0.12.0"
tracing = { version = "0.1.44", default-features = false, features = ["attributes", "log"] }

[build-dependencies]
cfg_aliases = "0.2.1"
cc = "1.2"
cfg-if = { version = "1" }
cargo_metadata = "0.23"

[features]
default = ["wasmtime_lts"]
wasmtime_latest = ["dep:wasmtime"]
wasmtime_lts = ["dep:wasmtime_lts"]
gdb = ["wasmtime?/debug-builtins", "wasmtime_lts?/debug-builtins"]
pulley = ["wasmtime?/pulley", "wasmtime_lts?/pulley"]
# Opt-in: expose generic guest-state (linear memory + mutable globals)
# capture/restore guest functions used to build portable byte snapshots.
snapshot-linear-mem = []
trace_guest = ["hyperlight-common/trace_guest", "hyperlight-guest/trace_guest", "hyperlight-guest-bin/trace_guest"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(hyperlight)'] }
